--- a/Event Management/Expenses Management/Web.config
+++ b/Event Management/Expenses Management/Web.config
@@ -83,4 +83,7 @@
     </compilers>
   
   </system.codedom>
+<connectionStrings>
+    <add name="dbconnection" connectionString="Data Source= DESKTOP-R5CTQN3\SQLEXPRESS; Integrated Security=true;Initial Catalog= Event_Management; " providerName="System.Data.SqlClient" />
+</connectionStrings>
 </configuration>
